fix progress_contrast_analysis

--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/css/main.css
@@ -4,7 +4,7 @@ html,body{
   width: 100%;
   height: 100%;
 }
-#resoucesRMApp {
+#resourcesRMApp {
   /* display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -16,7 +16,7 @@ html,body{
   box-sizing: border-box;
 }
 
-#resoucesRMApp .btn-lsit {
+#resourcesRMApp .btn-lsit {
   width: 100%;
   height: 50px;
   background: #fff;
@@ -29,11 +29,11 @@ html,body{
   position: relative;
 }
 
-#resoucesRMApp .btn-lsit .btn-box-right{
+#resourcesRMApp .btn-lsit .btn-box-right{
   padding-right: 20px;
 }
 
-#resoucesRMApp .btn-lsit button {
+#resourcesRMApp .btn-lsit button {
   border: none;
   font-size: 12px;
   color: #fff;
@@ -45,20 +45,20 @@ html,body{
   border-radius: 2px;
 }
 
-#resoucesRMApp .btn-lsit button:hover {
+#resourcesRMApp .btn-lsit button:hover {
   background: #779bf5;
 }
 
-#resoucesRMApp .el-table__body tr.current-row > td {
+#resourcesRMApp .el-table__body tr.current-row > td {
   background-color: #eff3fd   !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
-#resoucesRMApp .el-table--enable-row-hover .el-table__body tr:hover > td {
+#resourcesRMApp .el-table--enable-row-hover .el-table__body tr:hover > td {
   background-color: #eff3fd  ;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 
-#resoucesRMApp .check-man {
+#resourcesRMApp .check-man {
   width: 140%;
   height: 30px;
   display: flex;
@@ -68,11 +68,11 @@ html,body{
   margin: 0 -10px;
   text-indent: 10px;
 }
-#resoucesRMApp .check-man{
+#resourcesRMApp .check-man{
   border-top: none;
   border-bottom: 1px solid #cecece;
 }
-#resoucesRMApp .check-man:nth-last-of-type(1) {
+#resourcesRMApp .check-man:nth-last-of-type(1) {
   border: none;
 }
 
